# EO4DM-Rapports

./: .gitignore  README.md  analyseVHI.html  analyseVHI.qmd  analyseVHI.tex  pyproject.toml  rapport_execution.html  rapport_execution.qmd  some_results.qmd
ressources/: README_PREVISION.md  ex_carte_VAI_20190401_20.pgw
ressources/livrables/: Note_synthese_DataCubes.docx  Reunion_20221026_DATACUBES_EO4DM_FondsPacifique.pptx
ressources/livrables/Gap-Filling_L7/: 0_B3_Synthese_GapFilling_L7.xlsx  1_NDWI_Synthese_GapFilling_L7.xlsx  2_QMASK_Synthese_GapFilling_L7.xlsx
